fixed layout problems with about_us.html and index.html

--- a/css/home1.css
+++ b/css/home1.css
@@ -18,7 +18,8 @@ article > p {
   font-weight: 200;
 }
 
-.row {
+.row .previews{
+  /* width: 100%; */
   font-family: Helvetica, sans-serif;
   font-size: 14px;
   text-align: center;
@@ -26,24 +27,38 @@ article > p {
 
 .fun-articles {
   max-width: 25%;
+  margin-top: 2em;
+  padding: 2em;
 }
 
 .main-article {
-  max-width: 50%;
+  max-width: 75%;
+  text-align: center;
 }
 
 .light-tan {
   color: #BDA87E;
 }
 
+section .about-article {
+  text-align: center;
+}
+
 .about-article {
   border: 5px solid #313131;
-  max-width: 33%;
+  font-size: .75em;
+  max-width: 30%;
   margin: 2px;
-  padding: 2em 6em 0 6em;
+  padding: 2em 2em 0 2em;
 
 }
 
-.body-one-main {
+.about-article h3{
+  font-size: 1.3em;
+  color: #3F3F3F;
+}
+
+.body-one-section {
+
   background-image: url("../../NortSea_bootstrap-exercise/Project Assets/background-texture.png");
 }
